Staging/recipe/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-recipe-service
  namespace: staging
spec:
  selector:
    app: staging-recipe-app
  ports:
    - protocol: "TCP"
      port: 9099
      targetPort: 8080
      # nodePort: 32000
  type: ClusterIP
